# mini-xl

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  analyseur.py  generateur.py  main.py  menu.py  mini-xl  pyproject.toml  scanner.py  test_mini_xl.py  utils.py
src/mini_xl/: __init__.py  __main__.py  analyseur.py  generateur.py  main.py  menu.py  scanner.py  utils.py
tests/: test_mini_xl.py
